2002-09-09  Mark McLoughlin  <mark@skynet.ie>

	* libIDL-config.in: s/-lIDL/-lIDL-2/. This script
	should be removed by rights.

2002-08-27  Thomas Vander Stichele <thomas@apestaart.org>

  	* configure.in: make failures to find a usable flex and yacc
          critical 

2002-08-18  Havoc Pennington  <hp@pobox.com>

	* autogen.sh: hardcode aclocal-1.4/automake-1.4 so that users with
	both automake 1.6 and 1.4 installed get the right automake. Means
	compilation from CVS will now require the latest automake 1.4
	release, or manually creating symlinks called "automake-1.4" and
	"aclocal-1.4"

2002-06-06  jacob berkman  <jacob@ximian.com>

	* IDL.h.new.in: 
	* configure.in: use %q rather than %ll on bsd (fixes bug #80439)

2002-06-03  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 0.8.0.

2002-03-28  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: link against glib. (75701)

2002-03-01  jacob berkman  <jacob@ximian.com>

	* Makefile.am (EXTRA_DIST): remove stamp-parser as this is broken

	* autogen.sh: call automake with --copy

2002-02-04  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 0.7.4.

2002-02-04  Shivram U <shivaram.upadhyayula@wipro.com>

	reviewed by: Mark McLoughlin  <mark@skynet.ie>

	* parser.y:
	* util.c: remove deprecated glib functions.
	s/g_string_sprintf/g_string_printf/ and
	s/g_strcasecmp/g_ascii_strcasecmp/.

2002-01-28  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 0.7.3.

2002-01-17  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: add spec file to EXTRA_DIST.

2002-01-11  Fabrice <fabrice@gnu.org>

	reviewed by: Mark McLoughlin  <mark@skynet.ie>

	* lexer.l: gcc 3.0 update.

2002-01-09  Michael Meeks  <michael@ximian.com>

	* Version 0.7.2

2002-01-03  Mark McLoughlin  <mark@skynet.ie>

	* lexer.l: lame workaround for FreeBSD bug.

2001-10-16  Ross Golder  <rossg@durban.golder.org>

	* libIDL.spec.in: Updated filenames/paths for libIDL2.

2001-10-05  Abel Cheung  <maddog@linux.org.hk>
