@@ -72,10 +72,10 @@ if test "$echo_exec_prefix" = "yes"; then
 	echo $exec_prefix
 fi
 if test "$echo_cflags" = "yes"; then
-	all_flags="$all_flags $includes $cflags `glib-config --cflags`"
+	all_flags="$all_flags $includes $cflags `pkg-config --cflags glib-2.0`"
 fi
 if test "$echo_libs" = "yes"; then
-	all_flags="$all_flags -L@libdir@ -lIDL-2 `glib-config --libs`"
+	all_flags="$all_flags -L@libdir@ -lIDL-2 `pkg-config --libs glib-2.0`"
 fi
 
 # Straight out any possible duplicates, but be careful to
